--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                             placeholder="url para customizar a imagem">
                     </div>
                 <button class="btn btn-primary" onclick="clickStart()"> Gerar Cartelas</button>
+                <button class="btn btn-secondary" onclick="window.print()">Imprimir</button>
+                
             </div>
             <div class="col-md-6">
                 <div class="form-group">
