--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="site-top hidden-print">
         <div class="page-header">
-            <h1> Gerador de Cartela de Bingo!</h1>
+            <h1> Gerador de Cartela de Bingo V2</h1>
         </div>
         <div class="col-md-12" >
             <div class="col-md-6">
