--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
                 </div>
                 <div class="form-group" >
                         <label for="imgCartela">Url para a imagem central</label>
-                        <input type="url" min="1" max="100" class="form-control" id="imgCartela"
-                            placeholder="url para customizar a imagem">
-                    </div>
+                        <input 
                 <button class="btn btn-primary" onclick="clickStart()"> Gerar Cartelas</button>
                 <button class="btn btn-secondary" onclick="window.print()">Imprimir</button>
                 
