--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="form-group" >
                     <label for="qtdCartelas">Quantidade de cartelas</label>
-                    <input type="number" min="1" max="100" class="form-control" id="qtdCartelas"
-                        placeholder="Digite aqui a quantidade de cartelas">
+                    <input type="number" min="1" max="120" class="form-control text" id="qtdCartelas"
+                        placeholder="Digite aqui a quantidade de cartelas!">
                 </div>
                 <div class="form-group" >
                         <label for="imgCartela">Url para a imagem central</label>
