--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <div class="site-top hidden-print">
-        <div class="page-header">
-            <h1> Gerador de Cartela de Bingo V2</h1>
-        </div>
+        <div class="simples-header">
+           <h2> Gerador de Cartela de Bingo <h2>
+        <div>
         <div class="col-md-12" >
             <div class="col-md-6">
                 <div class="form-group">
@@ -42,13 +42,13 @@
                 <div class="form-group">
                     <label for="casasBingo">Lista de casas</label>
                     <textarea class="form-control" id="casasBingo"
-                        placeholder="Digite aqui a lista de valores das casas"></textarea>
+                        place
                 </div>
             </div>
         </div>
     </div>
     <div id="output">
-
+        holder="Digite aqui a lista de valores das casas"></textarea>
     </div>
 </body>
 
