Ordem e tamanho cartelas

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
                 <div class="form-group">
                     <label for="nomeBingo">Nome do Bingo!</label>
                     <input type="text" class="form-control" id="nomeBingo"
-                        placeholder="Digite aqui o nome do seu bingo">
+                        placeholder="Digite aqui o nome do seu bingo"
+                        value="BINGO">
                 </div>
                 <div class="form-group" >
                     <label for="qtdCartelas">Quantidade de cartelas</label>
                     <input type="number" min="1" max="100" class="form-control" id="qtdCartelas"
+                        value="10"
                         placeholder="Digite aqui a quantidade de cartelas">
                 </div>
                 <div class="form-group" >
